--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -5,4 +5,24 @@
     }
 
 
-}
+} .project {
+    width: 86%;
+     overflow: hidden;
+     /* background: rgba(0, 0, 0,.2); */
+     background: rgba(0, 21, 40, .92);
+     padding:1.5em;
+     border-radius: .5em;
+     list-style: none;
+     float: none;
+     height:15rem;
+     position: relative;
+     max-width: 25em;
+     
+
+ }
+/* ul.portfolio {
+    background: rgba(0, 21, 40, .92);
+}  */
+li.project:nth-child(odd), li.project  {
+    margin: 0 auto 1.5em;
+    } 
